# registrar

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile  Makefile  README.md  env.example
.github/workflows/: docker-build-push.yml
src/: main.rs  server.rs
src/server/: drip.rs  register.rs  send.rs  shared.rs  util.rs
