[package]
name = "hoku_registrar"
description = "An account registration service for Hoku."
authors = ["Hoku Contributors"]
edition = "2021"
homepage = "https://github.com/hokunet/registrar/"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/hokunet/registrar/"
keywords = ["TODO"]
version = "0.1.0"

[[bin]]
name = "registrar"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.82"
cf-turnstile = "0.2.0"
clap = { version = "4.1.14", features = ["derive", "env"] }
ethers = { version = "2.0.14", features = ["ws"] }
hex = "0.4.3"
log = "0.4.22"
once_cell = "1.19.0"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.115", features = ["preserve_order"] }
stderrlog = "0.6.0"
tokio = { version = "1.37.0", features = ["full"] }
warp = "0.3.7"

# Vendored for cross-compilation, see https://github.com/cross-rs/cross/wiki/Recipes#openssl
# Make sure every top level build target actually imports this dependency, and don't end up
# depending on the same _without_ the "vendored" feature, because then the Docker build for
# for ARM64 on AMD64 will fail, it won't find the OpenSSL installation.
openssl = { version = "0.10", features = ["vendored"] }
